# LocalNow

./: .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml  progress.md  render.yaml
.github/workflows/: ci.yml  deploy-frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  pyproject.toml
backend/agent/: graph.py  nodes.py  state.py
backend/api/: auth.py  main.py  oauth.py  ratelimit.py  routes.py  session_store.py
backend/data/: evaluate.py  generate.py  restaurants.json  restaurants_full.json  venues.json  venues_full.json
backend/llm/: factory.py
backend/models/: schemas.py
backend/prompts/intent_parser/: system.txt
backend/prompts/notifier/: system.txt
backend/prompts/planner/: system.txt
backend/scripts/: test_amap_live.py
backend/tests/: README.md  README.zh-CN.md  conftest.py  test_amap_http.py  test_availability.py  test_booking.py  test_e2e.py  test_geo.py  test_graph_routing.py  test_notification.py  test_phase1_models.py  test_timeline_validation.py  test_travel.py
backend/tools/: amap_http.py  availability.py  booking.py  geo.py  links.py  notification.py  search.py  store.py  travel.py
docs/: architecture.md  architecture.zh-CN.md  deployment.md  deployment.zh-CN.md  design.md  design.zh-CN.md  development.md  development.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/planner/: AgentProgress.tsx  ChatInput.tsx  ExecSummary.tsx  ItineraryChecklist.tsx  PlanCards.tsx  PlannerInput.tsx
frontend/lib/: api.ts  auth.ts  share.ts  types.ts
