[project]
name = "localnow-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Agent 编排
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # LLM Providers
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    # 结构化输出
    "instructor>=1.5",
    "pydantic>=2.0",
    # 语义检索
    "chromadb>=0.5",
    # FastAPI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    # 工具
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # 可观测性
    "langsmith>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "tools", "llm", "models", "prompts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
