[project]
name = "localnow-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Agent 编排
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # LLM Providers
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    # 数据模型
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # FastAPI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    # 工具
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # 可观测性
    "langsmith>=0.1",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "tools", "llm", "models", "prompts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# 独立调试脚本需在 import 前插入 sys.path，E402 为预期行为
"scripts/*" = ["E402"]
